force-app/main/default/objects/Finance_Request_PO_Line_Item__c/Finance_Request_PO_Line_Item__c.object-meta.xml
<CustomObject>
    <description>this is part of the bulk buy process. This is a child object of the bulk buy process</description>
    <label>Finance Request PO Line Item</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Finance Request PO</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Request PO Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>