force-app/main/default/objects/Finance_Request_PO_Line_Item__c/fields/Invoices__c.field-meta.xml
<CustomField>
    <fullName>Invoices__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>You can place a single or multiple invoices (comma separated) in this field. The invoice(s) are only related to the &apos;Single PO&apos; identified on the same record line</inlineHelpText>
    <label>Invoices</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>