force-app/main/default/objects/Finance_Request_PO_Line_Item__c/fields/Single_PO__c.field-meta.xml
<CustomField>
    <fullName>Single_PO__c</fullName>
    <description>Only a single PO should be placed in this field (DO NOT PUT MULTIPLE PO&apos;S)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Only a single PO should be placed in this field (DO NOT PUT MULTIPLE PO&apos;S)</inlineHelpText>
    <label>Single PO</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>